--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -36,6 +36,7 @@ $icons-color: #fff;
 $text-color: #8b92a9;
 $text-very-ligth: #606477;
 $font-paragraphs: 1.6rem;
+$font-paragraphs-small: 1.2rem;
 $font-titles: 3.6rem;
 $background-general-card: #202940;
 $box-shadow-general-card: 0 1px 4px 0 rgb(0 0 0 / 14%);
@@ -109,3 +110,62 @@ html {
 	background: $text-color;
 	border-radius: 1.4rem;
 }
+
+// < change lenguage>
+.switch-language {
+	z-index: 25;
+	right: 2rem;
+	top: -4rem;
+	position: absolute;
+	height: 2rem;
+	display: flex;
+	justify-content: center;
+	&__span-en {
+		color: $text-color-paragraph-inner-cards;
+		font-size: $font-paragraphs;
+		// height: 100%;
+	}
+	&__span-es {
+		color: $text-color-paragraph-inner-cards;
+		font-size: $font-paragraphs;
+		// height: 100%;
+	}
+	&__check-box-language {
+		cursor: pointer;
+		position: relative;
+		width: 5rem;
+	}
+	&__check-box-language:before {
+		content: "";
+		position: absolute;
+		width: 5rem;
+		height: 2.5rem;
+		background: gray;
+		border-radius: 25px;
+	}
+	&__check-box-language:after {
+		content: "";
+		position: absolute;
+		width: 2.5rem;
+		height: 2.5rem;
+		background: white;
+		border-radius: 2.5rem;
+		transition: 0.25s;
+		border: 0.2rem solid #333;
+	}
+	&__check-box-language:checked:after {
+		transform: translateX(2.5rem);
+		border: 0.2rem solid #7b1fa288;
+	}
+	&__check-box-language:checked:before {
+		background: $background-cards-viollete;
+	}
+}
+
+@media (max-width: 990px) {
+	.switch-language {
+		margin: 0 auto;
+		top: 2rem;
+	}
+}
+// < change lenguage>
