--- a/css/_header.scss
+++ b/css/_header.scss
@@ -8,6 +8,7 @@
 	}
 
 	.card-header-a {
+		padding-right: 0;
 		z-index: 10;
 		width: 100%;
 		display: flex;
@@ -187,6 +188,10 @@
 
 	.row {
 		.card-header-a {
+			&__button-cv {
+				height: 11.5rem;
+			}
+
 			&__photo {
 				// <Content>
 				&__content {
