--- a/css/_section.scss
+++ b/css/_section.scss
@@ -27,6 +27,30 @@
 		background-color: $background-general-card;
 		box-shadow: $box-shadow-general-card;
 		border-radius: 0.8rem;
+		&__col {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		&__section-2-col {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+		}
+		&__section-3-col {
+			display: flex;
+			flex-direction: column;
+		}
+		&__section-4-col {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+		}
+		&__section-5-col {
+			display: flex;
+			justify-content: center;
+		}
 
 		.container-title {
 			display: flex;
@@ -65,6 +89,12 @@
 
 		.section-card {
 			padding: 2.4rem 0;
+			.container-title {
+				margin-top: -4.4rem;
+				&__title {
+					height: 6rem;
+				}
+			}
 		}
 	}
 }
