--- a/css/_sendEmail.scss
+++ b/css/_sendEmail.scss
@@ -21,7 +21,6 @@
 			&__buttons {
 				display: flex;
 				justify-content: space-evenly;
-
 				&__btn:hover {
 					box-shadow: $box-shadow-card-viollete--hover;
 					color: white;
@@ -166,7 +165,7 @@
 	}
 }
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
 	// <btn form>
 
 	.row {
@@ -182,7 +181,9 @@
 			}
 			&__form {
 				&__buttons {
-					display: inline-block;
+					display: block;
+					flex-direction: column;
+					align-items: center;
 				}
 
 				&__buttons > button:nth-child(1) {
